# imago

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml  release.yml
src/: appdata.rs  archive.rs  auth.rs  browser.rs  config.rs  error.rs  guide.rs  httpx.rs  ig.rs  logx.rs  main.rs  media.rs  store.rs  watch.rs
