[package]
name = "imago"
version = "0.1.0"
edition = "2021"
description = "Agent-native Instagram profile archive — drop a URL, get every asset, watch for more"
license = "MIT"
repository = "https://github.com/guitaripod/imago"
homepage = "https://midgarcorp.cc/imago"
keywords = ["instagram", "archive", "cli", "download"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "imago"
path = "src/main.rs"

[dependencies]
aes = "0.8"
anyhow = "1"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
curl = "0.4"
dirs = "6"
futures = "0.3"
hmac = "0.12"
indicatif = "0.17"
pbkdf2 = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
